[tool.poetry]
name = "microfpga"
version = "3.1.1"
description = "FPGA-based platform for the electronic control of microscopes."
authors = ["Joran Deschamps <joran.deschamps@fht.org>"]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
flake8 = "^4.0.1"
pylint = "^2.13.5"
tox = "^3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "microfpga/_tests"
]