[metadata]
name = microfpga
version = 0.0.1
author = jdeschamps
author_email =
url = https://mufpga.github.io
license = GPL-v3
description = MicroFPGA is an FPGA-based platform for the electronic control of microscopes. It aims at using affordable FPGA to generate or read signals from a variety of devices, including cameras, lasers, servomotors, filter-wheels, etc. This package allows controlling MicroFPGA with Python.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
project_urls =
    Bug Tracker = https://github.com/mufpga/MicroFPGA-py/issues
    Documentation = https://mufpga.github.io
    Source Code = https://github.com/mufpga/MicroFPGA-py
    User Support = https://github.com/mufpga/MicroFPGA-py/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =microfpga

# add your package requirements here
install_requires =
    pyserial
    serial

[options.packages.find]
where = microfpga
