[metadata]
name = microfpga
author = Joran Deschamps
author_email =
url = https://mufpga.github.io
license = BSD 3-Clause License
description = FPGA-based platform for the electronic control of microscopes.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/mufpga/MicroFPGA-py/issues
    Documentation = https://mufpga.github.io
    Source Code = https://github.com/mufpga/MicroFPGA-py
    User Support = https://github.com/mufpga/MicroFPGA-py/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =microfpga

# add your package requirements here
install_requires =
    pyserial

[options.packages.find]
where = microfpga
